--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Engine/Maps/Templates/OpenWorld.OpenWorld
+EditorStartupMap=/Game/_Main/Levels/BasicMap.BasicMap
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -10,7 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld.OpenWorld
+GameDefaultMap=/Game/_Main/Levels/BasicMap.BasicMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/_Main/Blueprints/GM_GameMode.GM_GameMode_C
 GlobalDefaultServerGameMode=None
